test/errors/overflow.kbn
令甲爲九千九百九十九萬九千九百九十九
令乙爲甲與甲之積
令丙爲乙與乙之積
書丙
